@@ -1,3 +1,7 @@
+Fri Jul 29 20:48:39 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/mkconstants.rb: fix typos.
+
 Fri Jul 29 20:28:56 2011  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/mkconstants.rb: use whitespaces as a separator.
